kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: go-api
        image: gcr.io/vallery-demo/api
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256M
            cpu: 250m
          limits:
            memory: 512M
            cpu: 500m
