kubernetes/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "demo-ip"
spec:
  backend:
    serviceName: api-service
    servicePort: 80
