kubernetes/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "demo-ip"
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
